--- a/src/config/devConfig.json
+++ b/src/config/devConfig.json
@@ -6,11 +6,13 @@
     "isWxWebView": false,
     "appID": "a765ff3f-8d33-49b4-a9c9-48e991544242",
     "appSecret": "ec2a9a5d-8b21-40fb-b20b-fa846b944e7b",
-    "basePath" : "http://school.xiaoheiban.cn",
-    "loginPath": "http://school.xiaoheiban.cn",
+    "basePath": "http://school-test.xiaoheiban.cn",
+    "loginPath": "http://school-test.xiaoheiban.cn",
+    "xhbPath": "https://demo.xiaoheiban.cn",
     "interfacePath": "http://school-test.xiaoheiban.cn",
+    "iosUpdatePath": "https://www.pgyer.com/fpsM",
     "version": {
-      "currentVersion": "2.0.0",
+      "currentVersion": "0.0.0",
       "currentversionName": "此版本为测试版本1.0.0",
       "currentSubVersion": "1",
       "currentSubVersionName": "app包"
