--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "hand-portal-hybrid",
+  "name": "yitong-portal-hybrid",
   "version": "1.0.0",
   "main": "path/to/main.css",
   "ignore": [
