--- a/src/config/prodConfig.json
+++ b/src/config/prodConfig.json
@@ -10,7 +10,7 @@
     "loginPath": "http://school.xiaoheiban.cn",
     "xhbPath": "https://platform.xiaoheiban.cn",
     "interfacePath": "http://school-test.xiaoheiban.cn",
-    "iosUpdatePath": "https://www.pgyer.com/fpsM",
+    "iosUpdatePath": "https://fir.im/l915",
     "version": {
       "currentVersion": "1.0.0",
       "currentversionName": "此版本为正式版本1.0.0",
