--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,7 +2,8 @@
   "name": "ionic-conference-app",
   "app_id": "",
   "integrations": {
-    "gulp": {}
+    "gulp": {},
+    "cordova": {}
   },
   "type": "ionic1",
   "watchPatterns": [
