--- a/src/config/devConfig.json
+++ b/src/config/devConfig.json
@@ -6,7 +6,7 @@
     "isWxWebView": false,
     "appID": "a765ff3f-8d33-49b4-a9c9-48e991544242",
     "appSecret": "ec2a9a5d-8b21-40fb-b20b-fa846b944e7b",
-    "basePath": "http://school-test.xiaoheiban.cn",
+    "basePath": "https://yt-test.xiaoheiban.cn",
     "loginPath": "http://school-test.xiaoheiban.cn",
     "xhbPath": "https://demo.xiaoheiban.cn",
     "interfacePath": "http://school-test.xiaoheiban.cn",
