--- a/src/config/prodConfig.json
+++ b/src/config/prodConfig.json
@@ -6,15 +6,15 @@
     "isWxWebView": false,
     "appID": "a765ff3f-8d33-49b4-a9c9-48e991544242",
     "appSecret": "ec2a9a5d-8b21-40fb-b20b-fa846b944e7b",
-    "basePath": "http://school.xiaoheiban.cn",
+    "basePath": "https://yt.xiaoheiban.cn",
     "loginPath": "http://school.xiaoheiban.cn",
     "xhbPath": "https://platform.xiaoheiban.cn",
     "interfacePath": "http://school-test.xiaoheiban.cn",
     "iosUpdatePath": "https://fir.im/l915",
     "version": {
-      "currentVersion": "1.2.3",
-      "currentversionName": "此版本为正式版本1.2.3",
-      "currentSubVersion": "1.2.3",
+      "currentVersion": "1.3.0",
+      "currentversionName": "此版本为正式版本1.3.0",
+      "currentSubVersion": "1.3.0",
       "currentSubVersionName": "app包"
     }
   }
