--- a/plugins/cordova-plugin-crosswalk-webview/package.json
+++ b/plugins/cordova-plugin-crosswalk-webview/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "cordova-plugin-crosswalk-webview",
-  "version": "2.3.0",
-  "description": "Changes the default WebView to CrossWalk",
+  "_from": "cordova-plugin-crosswalk-webview@2.4.1",
+  "_id": "cordova-plugin-crosswalk-webview@2.4.1",
+  "_inBundle": false,
+  "_integrity": "sha1-TIIFK4KQPHbuC4jpvxK0zqjWJHU=",
+  "_location": "/cordova-plugin-crosswalk-webview",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "cordova-plugin-crosswalk-webview@2.4.1",
+    "name": "cordova-plugin-crosswalk-webview",
+    "escapedName": "cordova-plugin-crosswalk-webview",
+    "rawSpec": "2.4.1",
+    "saveSpec": null,
+    "fetchSpec": "2.4.1"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "http://registry.npm.taobao.org/cordova-plugin-crosswalk-webview/download/cordova-plugin-crosswalk-webview-2.4.1.tgz",
+  "_shasum": "4c82052b82903c76ee0b88e9bf12b4cea8d62475",
+  "_spec": "cordova-plugin-crosswalk-webview@2.4.1",
+  "_where": "/Users/daidongdong/Desktop/svn/trunk/yitong/node_modules",
+  "author": "",
+  "bugs": {
+    "url": "https://crosswalk-project.org/jira"
+  },
+  "bundleDependencies": false,
   "cordova": {
     "id": "cordova-plugin-crosswalk-webview",
     "platforms": [
       "android"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/crosswalk-project/cordova-plugin-crosswalk-webview.git"
-  },
-  "keywords": [
-    "cordova",
-    "chromium",
-    "crosswalk",
-    "webview",
-    "engine",
-    "ecosystem:cordova",
-    "cordova-android"
-  ],
+  "deprecated": false,
+  "description": "Changes the default WebView to CrossWalk",
   "engines": {
     "cordovaDependencies": {
       "2.0.0": {
@@ -40,12 +55,21 @@
       }
     }
   },
-  "author": "",
-  "license": "Apache 2.0",
-  "bugs": {
-    "url": "https://crosswalk-project.org/jira"
-  },
   "homepage": "https://github.com/crosswalk-project/cordova-plugin-crosswalk-webview",
-  "_from": "cordova-plugin-crosswalk-webview@2.3.0",
-  "_resolved": "http://registry.npm.taobao.org/cordova-plugin-crosswalk-webview/download/cordova-plugin-crosswalk-webview-2.3.0.tgz"
+  "keywords": [
+    "cordova",
+    "chromium",
+    "crosswalk",
+    "webview",
+    "engine",
+    "ecosystem:cordova",
+    "cordova-android"
+  ],
+  "license": "Apache 2.0",
+  "name": "cordova-plugin-crosswalk-webview",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/crosswalk-project/cordova-plugin-crosswalk-webview.git"
+  },
+  "version": "2.4.1"
 }
